--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,8 +1,14 @@
+h1{
+    color: #63b6ac;
+    text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.268);
+}
+
 #form_login{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: white;
 }
 
 .incorrecto{
@@ -12,4 +18,21 @@
 
 #form_login>input{
     margin-bottom: 10px;
+}
+
+.botonRegistrar{
+    background-color: transparent;
+    color: white;
+    border-radius: 5px;
+    padding: 0;
+    font-weight: bold;
+}
+
+.botonRegistrar:hover{
+    color: #63b6ac;
+}
+
+.botonLogin{
+    border-radius: 10px;
+    box-shadow: 3px 3px 20px rgba(255, 255, 255, 0.422);
 }
