--- a/src/css/BotonNuevo.css
+++ b/src/css/BotonNuevo.css
@@ -19,8 +19,8 @@
     position: absolute;
     background-color: white;
     color: black;
-    top: -73px;
-    left: 25px;
+    bottom: 55px;
+    left: 85%;
     width: 150px;
     padding: 0;
     border: 1px solid #05463e;
