--- a/src/css/ChatWindow.css
+++ b/src/css/ChatWindow.css
@@ -9,6 +9,18 @@
     margin-right: 20px;
 }
 
+#send-file{
+    display: flex;
+    font-size: 20px;
+    color: #075e54;
+    background-color: #e0e0e0;
+    cursor: pointer;
+    margin-right: 10px;
+    align-items: center;
+    border-radius: 50%;
+    width: 30px;
+}
+
 .input-box{
     display: flex;
     justify-content: space-between;
