--- a/src/css/ChatWindow.css
+++ b/src/css/ChatWindow.css
@@ -11,14 +11,19 @@
 
 #send-file{
     display: flex;
-    font-size: 20px;
+    font-size: 25px;
     color: #075e54;
     background-color: #e0e0e0;
     cursor: pointer;
     margin-right: 10px;
     align-items: center;
     border-radius: 50%;
-    width: 30px;
+    width: 48px;
+    justify-content: center;
+}
+
+#send-file:hover{
+    background-color: #f5f5f5;
 }
 
 .input-box{
