--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -44,3 +44,7 @@ h1{
     border-radius: 10px;
     box-shadow: 3px 3px 20px rgba(255, 255, 255, 0.422);
 }
+
+.botonLogin:hover{
+    background: radial-gradient(#177268, #075e54);
+}
