--- a/src/css/Message.css
+++ b/src/css/Message.css
@@ -2,12 +2,17 @@
     overflow-y: scroll;
 }
 
+.messages>p{
+    color: white;
+}
+
 .message{
-    padding: 10px;
+    padding: 10px 10px 5px 10px;
     margin: 5px;
     max-width: 55%;
     clear: both;
     word-break: break-word;
+    display: flex;
 }
 
 .message p{
@@ -15,11 +20,12 @@
 }
 
 .enviado{
-    text-align: right;
+    text-align: left;
     background-color: #075e54;
     border-radius: 10px 2% 10px 10px;
     color: #fff;
     float: right;
+    flex-direction: row-reverse;
 }
 
 .recibido{
@@ -27,7 +33,6 @@
     background-color: #f0f0f0;
     border-radius: 0 10px 10px 10px;
     float: left;
-    color: black;
 }
 
 .usuario-message{
@@ -48,4 +53,20 @@ a:hover{
 
 a:visited{
     color: rgb(111, 162, 255);
+}
+
+.time{
+    font-size: 10px;
+    align-self: flex-end;
+    min-width: max-content;
+}
+
+.enviado .time{
+    padding-right: 5px;
+    color: rgb(196, 196, 196);
+}
+
+.recibido .time{
+    padding-left: 5px;
+    color: rgb(126, 126, 126);
 }
